# dilks-revenge

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  design.md  linbuild.sh  readme.md  todo.md  todo.old.md  winbuild.bat
assets/textures/player/: player.kra
assets/textures/ship/: ship-heavy.kra  ship-light.kra
game/: CMakeLists.txt
game/include/: bullet.h  clock.h  controller.h  enemy.h  enemy_rail.h  enemy_rail_manager.h  game.h  player.h  random.h  shield.h  system.h  vec.h
game/src/: bullet.c  clock.c  controller.c  enemy.c  enemy_rail.c  enemy_rail_manager.c  game.c  main.c  player.c  shield.c  vec.c
include/: args.h  assets.h  background.h  bullet.h  camera.h  clock.h  collisions.h  containers.h  controller.h  debug.h  enemy.h  enemy_rail.h  enemy_rail_manager.h  entities.h  events.h  file.h  font.h  game.h  game_input.h  game_mode.h  game_state.h  game_ui.h  globals.h  levels.h  main_menu.h  maths.h  player.h  projectile.h  random.h  resources.h  shield.h  smallship.h  sprite.h  system.h  texture.h  types.h  ui.h  util.h  vec.h  wave.h
src/: args.c  assets.c  background.c  bullet.c  camera.c  clock.c  collisions.c  controller.c  debug.c  enemy.c  enemy_rail.c  enemy_rail_manager.c  entities.c  events.c  file.c  font.c  game.c  game_input.c  levels.c  main.c  main_menu.c  player.c  projectile.c  random.c  resources.c  shield.c  smallship.c  sprite.c  system.c  texture.c  types.c  ui.c  util.c  vec.c  wave.c
